--- a/Web1/src/main/webapp/WEB-INF/web.xml
+++ b/Web1/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,33 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <servlet>
+        <servlet-name>JavaServlet</servlet-name>
+        <servlet-class>com.sample.JavaServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>OptionServlet</servlet-name>
+        <servlet-class>com.sample.OptionServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>JavaServlet</servlet-name>
+        <url-pattern>/stock-price</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>JavaServlet</servlet-name>
+        <url-pattern>/stock-price-welcome</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>JavaServlet</servlet-name>
+        <url-pattern>/index</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>OptionServlet</servlet-name>
+        <url-pattern>/option-price</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>OptionServlet</servlet-name>
+        <url-pattern>/option-price-welcome</url-pattern>
+    </servlet-mapping>
 </web-app>
